# project4_Team_5

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: 404.html  base.html  index.html
data/: dataset_manifest.json
data/splits/: test.csv  train.csv  val.csv
logs/: class_weights.json  eda_decisions.json  train_log.csv
logs/baseline_e96de0c723f2/: classification_report.txt  run_summary.json  training_log.csv
logs/finetune_A_68c2ec38/: classification_report.txt  run_summary.json  training_log.csv
logs/finetune_B_a462064b/: classification_report.txt  run_summary.json  training_log.csv
logs/metadata/: class_weights.json  config.json  dataset.csv
models/versions/: waste_classifier_final_Jonathan.keras  waste_classifier_final_Naiza.keras  waste_classifier_final_R.keras  waste_classifier_final_Raul.keras
notebooks/: data-raw-R.ipynb  train-model-R.ipynb
notebooks/Jonathan/: 00_Data_Setup.ipynb  01_EDA_WasteClassifier.ipynb  02_baseline_v3.ipynb  03_experiments.ipynb  EDA_J.ipynb
notebooks/Naiza/: Baseline.ipynb  Eda.ipynb  test.csv  test.ipynb
notebooks/Raul/: 01_setup_datasets.ipynb  02_eda.ipynb  03_preprocessing.ipynb  04_train.ipynb  04b_finetune.ipynb  05_eval.ipynb
notebooks/Rob/: data-raw-R.ipynb  model-r.ipynb
src/: data_pipeline.py
