[project]
name = "project4-team-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naizabeth", email = "naiza1996n@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
